feat: add animated images example

--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "react",
     "animated",
     "animate",
-    "animation",
+    "animation",    
     "background",
     "background-color",
+    "images",
+    "img",
     "bg",
     "react-animated-bg",
     "random",
